All driving code and inanalysis.  Partial system g code.

--- a/code/how_many_s3.ipynb
+++ b/code/how_many_s3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -11,19 +11,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "big-data-carbon-tax\n"
+      "big-data-carbon-tax\n",
+      "223370\n"
      ]
     }
    ],
    "source": [
     "import boto3\n",
+    "import time\n",
+    "\n",
     "s3 = boto3.resource('s3')\n",
+    "\n",
     "for bucket in s3.buckets.all():\n",
     "    print(bucket.name)\n",
     "    i = 0\n",
     "    for obj in bucket.objects.all():\n",
     "        i+=1\n",
-    "    print(i)"
+    "    print(i)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8.333333333333334"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "200000/400/60"
    ]
   }
  ],
