--- a/code/upload_driving_distances.ipynb
+++ b/code/upload_driving_distances.ipynb
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -188,13 +188,13 @@
     "    fn_local = local_path+fn_root+'.json'\n",
     "    fn_local_meta = local_path+fn_root+'_meta.json'\n",
     "    fn_remote = remote_path+fn_root+'.json'\n",
-    "    fn_remote = remote_path+fn_root+'_meta.json'\n",
+    "    fn_remote_meta = remote_path+fn_root+'_meta.json'\n",
     "    \n",
     "    if os.path.isfile(fn_local):\n",
     "        with open(fn_local, \"rb\") as f:\n",
     "            s3.upload_fileobj(f, \"big-data-carbon-tax\", fn_remote)\n",
     "        with open(fn_local_meta, \"rb\") as f:\n",
-    "            s3.upload_fileobj(f, \"big-data-carbon-tax\", fn_remote)\n",
+    "            s3.upload_fileobj(f, \"big-data-carbon-tax\", fn_remote_meta)\n",
     "        \n",
     "        print('Sent',fn_local)\n",
     "        \n",
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -214,8 +214,37 @@
    "outputs": [],
    "source": [
     "import boto3\n",
-    "with open('../processeddata/driv_dist.parquet', \"rb\") as f:\n",
-    "    s3.upload_fileobj(f, \"big-data-carbon-tax\", 'bing_results/driv_dist.parquet')"
+    "s3 = boto3.client('s3')\n",
+    "with open('../processeddata/driv_dist.parquet.tar.gz', \"rb\") as f:\n",
+    "    s3.upload_fileobj(f, \"big-data-carbon-tax\", 'bing_results/driv_dist.parquet.tar.gz')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import boto3\n",
+    "s3 = boto3.client('s3')\n",
+    "with open('../rawdata/ACS_15_5YR_DP03b.csv', \"rb\") as f:\n",
+    "    s3.upload_fileobj(f, \"big-data-carbon-tax\", 'bing_results/ACS_15_5YR_DP03b.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import boto3\n",
+    "s3 = boto3.client('s3')\n",
+    "with open('../rawdata/ACS_15_5YR_S1903b.csv', \"rb\") as f:\n",
+    "    s3.upload_fileobj(f, \"big-data-carbon-tax\", 'bing_results/ACS_15_5YR_S1903b.csv')"
    ]
   }
  ],
