--- a/code/generate_distances.ipynb
+++ b/code/generate_distances.ipynb
@@ -19,42 +19,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "root\n",
-      " |-- GEOID: integer (nullable = true)\n",
-      " |-- NAME: string (nullable = true)\n",
-      " |-- UATYPE: string (nullable = true)\n",
-      " |-- POP10: integer (nullable = true)\n",
-      " |-- HU10: integer (nullable = true)\n",
-      " |-- ALAND: long (nullable = true)\n",
-      " |-- AWATER: integer (nullable = true)\n",
-      " |-- ALAND_SQMI: double (nullable = true)\n",
-      " |-- AWATER_SQMI: double (nullable = true)\n",
-      " |-- INTPTLAT: double (nullable = true)\n",
-      " |-- INTPTLONG: double (nullable = true)\n",
-      "\n",
-      "root\n",
-      " |-- GEOID: integer (nullable = true)\n",
-      " |-- POP10: integer (nullable = true)\n",
-      " |-- HU10: integer (nullable = true)\n",
-      " |-- ALAND: long (nullable = true)\n",
-      " |-- AWATER: long (nullable = true)\n",
-      " |-- ALAND_SQMI: double (nullable = true)\n",
-      " |-- AWATER_SQMI: double (nullable = true)\n",
-      " |-- INTPTLAT: double (nullable = true)\n",
-      " |-- INTPTLONG: double (nullable = true)\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import string\n",
     "dfMetroAreasRaw = spark.read.load(\"../rawdata/Gaz_ua_national.txt\", format=\"csv\", delimiter=\"\\t\", header=True, inferSchema=True)\n",
@@ -286,6 +255,15 @@
    "source": [
     "dfDist.write.save(\"../processeddata/distances.parquet\",mode='overwrite')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
