All analysis complete.

--- a/code/generate_distances.ipynb
+++ b/code/generate_distances.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -19,11 +19,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- GEOID: integer (nullable = true)\n",
+      " |-- NAME: string (nullable = true)\n",
+      " |-- UATYPE: string (nullable = true)\n",
+      " |-- POP10: integer (nullable = true)\n",
+      " |-- HU10: integer (nullable = true)\n",
+      " |-- ALAND: long (nullable = true)\n",
+      " |-- AWATER: integer (nullable = true)\n",
+      " |-- ALAND_SQMI: double (nullable = true)\n",
+      " |-- AWATER_SQMI: double (nullable = true)\n",
+      " |-- INTPTLAT: double (nullable = true)\n",
+      " |-- INTPTLONG: double (nullable = true)\n",
+      "\n",
+      "root\n",
+      " |-- GEOID: integer (nullable = true)\n",
+      " |-- POP10: integer (nullable = true)\n",
+      " |-- HU10: integer (nullable = true)\n",
+      " |-- ALAND: long (nullable = true)\n",
+      " |-- AWATER: long (nullable = true)\n",
+      " |-- ALAND_SQMI: double (nullable = true)\n",
+      " |-- AWATER_SQMI: double (nullable = true)\n",
+      " |-- INTPTLAT: double (nullable = true)\n",
+      " |-- INTPTLONG: double (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import string\n",
     "dfMetroAreasRaw = spark.read.load(\"../rawdata/Gaz_ua_national.txt\", format=\"csv\", delimiter=\"\\t\", header=True, inferSchema=True)\n",
@@ -258,12 +289,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3592"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfMetroAreasRaw.count()"
+   ]
   }
  ],
  "metadata": {
