--- a/code/setup_systemg.ipynb
+++ b/code/setup_systemg.ipynb
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -262,6 +262,20 @@
     }
    ],
    "source": [
+    "def append_m_prefix(row):\n",
+    "    prefix = 'm'\n",
+    "    new_row={}\n",
+    "    new_row['mid'] = prefix+str(row['m_id'])\n",
+    "    new_row['m_id'] = row['m_id']\n",
+    "    return new_row\n",
+    "\n",
+    "def append_z_prefix(row):\n",
+    "    prefix = 'z'\n",
+    "    new_row={}\n",
+    "    new_row['zid'] = prefix+str(row['z_id'])\n",
+    "    new_row['z_id'] = row['z_id']\n",
+    "    return new_row\n",
+    "\n",
     "dfDDist = spark.read.parquet(\"../processeddata/driv_dist.parquet\")\n",
     "\n",
     "temp = dfDDist.select('z_id').distinct().rdd.map(append_z_prefix)\n",
@@ -276,7 +290,7 @@
     "\n",
     "\n",
     "dfDDist = dfDDist.select('zid','mid','ddist')\n",
-    "dfDDist.coalesce(1).write.csv(\"/media/keir/Data/workspace/project/driv_dist.csv\",header=True,mode='overwrite')"
+    "dfDDist.coalesce(1).write.csv(\"../systemg/driv_dist.csv\",header=True,mode='overwrite')"
    ]
   }
  ],
