Renamed files and cleaned up directories.

--- a/code/setup_systemg.ipynb
+++ b/code/setup_systemg.ipynb
@@ -12,9 +12,20 @@
     "\n",
     "spark = SparkSession \\\n",
     "    .builder \\\n",
-    "    .appName(\"Calculate Distances\") \\\n",
-    "    .config(\"spark.some.config.option\", \"some-value\") \\\n",
+    "    .appName(\"Setup System G\") \\\n",
     "    .getOrCreate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "PATH_SYSTEMG = '../systemg/'\n",
+    "PATH_RAWDATA = '../rawdata/'"
    ]
   },
   {
