--- a/code/code_snippets.ipynb
+++ b/code/code_snippets.ipynb
@@ -20,6 +20,28 @@
    },
    "outputs": [],
    "source": [
+    "import boto3\n",
+    "import time\n",
+    "\n",
+    "s3 = boto3.resource('s3')\n",
+    "\n",
+    "for bucket in s3.buckets.all():\n",
+    "    print(bucket.name)\n",
+    "    i = 0\n",
+    "    for obj in bucket.objects.all():\n",
+    "        i+=1\n",
+    "    print(i)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "import json\n",
     "out = r.json()\n",
     "print(json.dumps(out[\"resourceSets\"][0][\"resources\"][0][\"travelDistance\"], sort_keys=True, indent=4))\n",
